# particles-bevy

./: Cargo.toml  Makefile.toml  index.html
src/: diagnostic_plugin.rs  main.rs  physics.rs
